--- a/coldstart-java-rearend/src/main/resources/template/Service.vm
+++ b/coldstart-java-rearend/src/main/resources/template/Service.vm
@@ -1,6 +1,6 @@
-package ${package_name}.rpc.api;
+package ${package_name}.service;
 
-import com.zheng.common.base.BaseService;
+import com.dvs.rearend.common.base.BaseService;
 import ${package_name}.dao.model.${model};
 import ${package_name}.dao.model.${model}Example;
 
