--- a/coldstart-java-rearend/src/main/resources/template/ServiceImpl.vm
+++ b/coldstart-java-rearend/src/main/resources/template/ServiceImpl.vm
@@ -1,11 +1,10 @@
-package ${package_name}.rpc.service.impl;
+package ${package_name}.service;
 
-import com.zheng.common.annotation.BaseService;
-import com.zheng.common.base.BaseServiceImpl;
+import com.dvs.rearend.common.annotation.BaseService;
+import com.dvs.rearend.common.base.BaseServiceImpl;
 import ${package_name}.dao.mapper.${model}Mapper;
 import ${package_name}.dao.model.${model};
 import ${package_name}.dao.model.${model}Example;
-import ${package_name}.rpc.api.${model}Service;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
